[package]
name = "gitbrute"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha1 = "0.10"
anyhow = "1.0"
regex = "1.10"
num_cpus = "1.16"
crossbeam-channel = "0.5"
hex = "0.4"
itertools = "0.12"

[package.metadata.deb]
maintainer = "GitBrute Contributors"
copyright = "2025, GitBrute Contributors"
license-file = ["README.md", "4"]
extended-description = """
gitbrute brute-forces a pair of author+committer timestamps such that the resulting git commit has your desired prefix."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/gitbrute", "usr/bin/", "755"],
]

